# project

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  IRONCLAW_INTEGRATION.md  Makefile  README.md  deploy_0g_testnet.sh  deploy_multichain.sh  package-lock.json  package.json  spec.md  test-0g-mint.mjs  test_proof_end_to_end.sh  test_proof_local.sh  vercel.json
.claude/: settings.json
1claw-server/: db.js  package-lock.json  package.json  server.js
agent/: Cargo.toml
agent/src/: api.rs  ironclaw_adapter.rs  main.rs  proof_agent.rs  proof_generator.rs
agent/src/core/: agent.rs  config.rs  config_test.rs  intent_router.rs  intent_router_test.rs  job_scheduler.rs  mod.rs  types.rs
agent/src/integrations/: eip8004.rs  ens_dm3.rs  inft.rs  ledger.rs  mod.rs  zero_g.rs
agent/src/safety/: injection_detector.rs  injection_detector_test.rs  mod.rs  policy_engine.rs  policy_engine_test.rs  sanitizer.rs  sanitizer_test.rs
agent/src/tools/: capabilities.rs  mod.rs  registry.rs  registry_test.rs  sandbox.rs
cli/: package.json
contracts/: foundry.toml
delivery-service/: README.md  setup.sh
dm3Daemon/: package-lock.json  package.json  server.js
frontend/: 0g-registration.js  agents.html  approve.html  auth-modules-panel.css  auth-modules-panel.js  auth-modules.html  config-validator.js  crypto.js  custom-auth.html  dashboard.html  deploy.html  docs.html  ens-resolver.js  index.html  kanban.html  kanbanBoard.html  messages.html  nav.js  openclaw-backup-schema.js  poc-api.js  proofs.html  shared.css  shared.js  soul-vault.html  viem-client.js  (+1 more)
(+38 files in other folders)
