[package]
name = "proof-of-claw-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# IronClaw base runtime
ironclaw = { git = "https://github.com/nearai/ironclaw", branch = "staging", optional = true }

tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
wasmtime = "16.0"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
ethers = "2.0"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[features]
default = ["standalone"]
standalone = []
ironclaw-integration = ["ironclaw"]

[dev-dependencies]
tokio-test = "0.4"
